Remake calc of translate
1. fix width of slides
2. start to remake slides translate
3. remove unnecessary styles
4. gulp task reload

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,29 +1,24 @@
-.usecase{
-  padding: 30px 0 0;
-  .section-title{
-    padding: 0 33px;
-    margin-bottom: 21px;
-    @include response($breakepoint-tablet) {
-      padding: 0;
-      margin-bottom: 6px;
-    }
-  }
+@import "common/variables";
+@import "common/mixins";
+
+html, body{
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
-.cases{
-  margin: 0 27px 56px 0px;
-  padding-left: 20px;
-  padding-right: 20px;
-  overflow: hidden;
+.slider{
+  margin: 0 47px 56px 20px;
   position: relative;
-  @include response($breakepoint-tablet) {
-    margin: 0 0 24px;
-    padding: 0;
+  > .slider-item {
+    display: none;
   }
-  &:last-child{
-    margin-bottom: 0;
+  &-outer{
+    margin: 0 20px;
+    overflow: hidden;
+    padding: 0 10px;
   }
-  &-wrap{
-    width: 10000px;
+  &-wrapper{
     transition: all .4s;
     &:after{
       content: '';
@@ -32,18 +27,12 @@
     }
   }
   &-item{
-    width: 269px;
+    //width: 269px;
     float: left;
-    margin-right: 31px;
-    @include response($breakepoint-tablet) {
-      margin-right: 0;
-    }
-    &:last-child{
-      margin-right: 0;
-    }
+    padding-right: 20px;
+    box-sizing: border-box;
     .header{
       position: relative;
-      margin-bottom: 47px;
       @include response($breakepoint-tablet) {
         height: 132px;
         overflow: hidden;
@@ -51,11 +40,12 @@
       }
       img{
         width: 100%;
+        display: block
       }
       p{
         position: absolute;
         bottom: -14px;
-        left: 4px;
+        left: 0;
         width: 180px;
         @include response($breakepoint-tablet) {
           width: 80px;
@@ -72,4 +62,26 @@
       }
     }
   }
+}
+
+.next, .prev{
+  background: transparent;
+  position: absolute;
+  top: 50px;
+  width: 0;
+  height: 0;
+  padding: 0;
+  cursor: pointer;
+}
+.next{
+  border-top: 17px solid transparent;
+  border-left: 11px solid $colorRed;
+  border-bottom: 17px solid transparent;
+  right: 0;
+}
+.prev{
+  border-top: 17px solid transparent;
+  border-right: 11px solid $colorRed;
+  border-bottom: 17px solid transparent;
+  left: 0;
 }
